tester/testsuite/good/core007.jl
// declaration and initialization in same statement

int main() {
 int x = 7;
 printInt(x);
 return 0 ;

}